force-app/main/default/objects/custom_create213__c/custom_create213__c.object-meta.xml
<CustomObject>
    <label>Custom created object213</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects213</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>