force-app/main/default/objects/custom_create213__c/fields/custom_create_213field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_213field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 213field503</label>
    <type>Checkbox</type>
</CustomField>