force-app/main/default/objects/custom_create213__c/fields/custom_create_213field559__c.field-meta.xml
<CustomField>
    <fullName>custom_create_213field559__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 213field559</label>
    <type>Checkbox</type>
</CustomField>